# loyalty-platform

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  generate_data.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci_cd.yml  deploy.yml
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py
core/: context.py  managers.py  middleware.py  models.py
loyalty/: apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
loyalty/management/commands/: generate_demo_data.py
loyalty/migrations/: 0001_initial.py  0002_alter_transaction_transaction_type.py  0002_reward.py  0003_alter_transaction_options_and_more.py  0003_customer_transaction.py  0004_remove_customer_email_remove_customer_phone.py  0005_customer_email.py  0006_campaign_reward_type_campaign_rules_and_more.py  0007_alter_campaign_points_value.py
nginx/: nginx.conf
src/apps/core/: managers.py  models.py
tests/: conftest.py  test_health.py
tests/factories/: loyalty.py  users.py
tests/integration/auth/: test_auth_views.py
tests/integration/core/: test_isolation.py  test_middleware.py
tests/integration/loyalty/: test_campaign_views.py  test_customer_views.py  test_full_flow.py  test_generate_demo_data.py  test_reward_views.py  test_stats_views.py  test_transaction_views.py
tests/integration/users/: test_api_keys.py  test_auth_views.py
tests/unit/loyalty/: test_api_views.py  test_customer_model.py  test_loyalty_models.py  test_race_condition.py  test_serializers.py  (+6 more)
users/: authentication.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_organizationapikey.py  0002_user_organization.py  0003_remove_organization_api_key.py
(+4 files in other folders)
